# mlia

./: .coveragerc  .flake8  .gitignore  .mdlrc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEV_GUIDE.md  Dockerfile  E2E_TESTS.md  MANIFEST.in  README.md  RELEASES.md  SECURITY.md  USER_GUIDE.md  check-e2e.sh  check-me.sh  gen-docs.sh  hatch_build.py  markdownlint_custom_style.rb  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  start-allmark.sh  tox.ini
.github/skills/openspec-apply-change/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
LICENSES/: LicenseRef-LICENSE.txt
docker/: Dockerfile  Dockerfile.e2e  install_python_versions.sh  pip.conf  pre-commit-config.yaml  pydistutils.cfg  pypirc  requirements-dev.txt  requirements.txt  run_e2e_tests.sh  run_gen_docs.sh  runner.py  self-check-helper.sh  utils.sh
docs/: Makefile  README.md  make.bat
docs/source/: api.md  backends.md  cli.md  conf.py  development.md  execution_flow.md  high_level_architecture.md  index.md  index.rst  metrics.md  overview.md  plugin_architecture.md
docs/source/_static/: .gitignore
examples/: all_tests.ipynb  inference_advisor.ipynb  operators.ipynb  optimization.ipynb  performance.ipynb
openspec/: config.yaml
openspec/changes/add-standard-performance-metrics/: design.md  proposal.md  tasks.md
openspec/changes/fix-advice-schema-output/: design.md  proposal.md  tasks.md
openspec/changes/separate-model-export-and-conversion/: design.md  proposal.md  tasks.md
openspec/changes/standardize-latency-metric/: design.md  proposal.md  tasks.md
openspec/changes/typer-cli-improvement/: proposal.md  tasks.md
openspec/specs/backend-package-installation/: spec.md
openspec/specs/e2e-testing/: spec.md
openspec/specs/plugin-architecture/: spec.md
pre_commit_hooks/: check_copyright_header.py
scripts/: extract_deps.py  gen_models.py  install.sh  install_dev.sh  install_new.sh  mlia_install.sh
src/mlia/: __init__.py  _constants.py  _typing.py  advisor.py  api.py  backends.py  config.py  exceptions.py  main.py  metadata.py  metrics.py  operators.py  performance.py  reporters.py  reporting.py  target_profiles.py  targets.py  use_cases.py  utils.py
src/mlia/backend/: __init__.py  application.py  common.py  config.py  controller.py  errors.py  execution.py  fs.py  install.py  manager.py  proc.py  protocol.py  registry.py  repo.py  source.py  system.py  vendor.py
src/mlia/cli/: __init__.py  advice.py  command_validators.py  commands.py  common.py  config.py  handlers.py  helpers.py  logging.py  main.py  options.py
src/mlia/core/: __init__.py  _typing.py  advice_generation.py  advisor.py  common.py  context.py  data_analysis.py  data_collection.py  errors.py  events.py  handlers.py  helpers.py  logging.py  metadata.py  mixins.py  output_schema.py  output_validation.py  performance.py  reporters.py  reporting.py  typing.py  workflow.py
src/mlia/devices/: config.py  (+1 more)
tests/: __init__.py  conftest.py  main_test.py  test_api.py  test_api_constants.py  test_api_logs_dir.py  test_api_option_discovery.py  test_api_output_capture.py  test_backend_application.py  test_backend_argo_config.py  test_backend_argo_install.py  test_backend_argo_performance.py  test_backend_armnn_tflite_delegate_compat.py  test_backend_auto_install.py  test_backend_common.py  test_backend_config.py  test_backend_corstone.py  test_backend_corstone_install.py  test_backend_corstone_performance.py  test_backend_execution.py  test_backend_executor_application.py  test_backend_executor_common.py  test_backend_executor_execution.py  test_backend_executor_fs.py  test_backend_executor_output_consumer.py  test_backend_executor_proc.py  test_backend_executor_runner.py  test_backend_executor_source.py  test_backend_executor_system.py  test_backend_fs.py  test_backend_install.py  test_backend_installation.py  test_backend_manager.py  test_backend_ngp_graph_compiler_config.py  test_backend_ngp_graph_compiler_output_parsing.py  test_backend_ngp_graph_compiler_performance.py  test_backend_ngp_graph_compiler_statistics.py  test_backend_nx_graph_compiler_config.py  test_backend_nx_graph_compiler_output_parsing.py  test_backend_nx_graph_compiler_performance.py  (+158 more)
tests/aiet/: __init__.py  conftest.py  test_backend_application.py  test_backend_common.py  test_backend_controller.py  test_backend_execution.py  test_backend_output_parser.py  test_backend_protocol.py  test_backend_source.py  test_backend_system.py  test_backend_tool.py  test_check_model.py  test_cli.py  test_cli_application.py  test_cli_common.py  test_cli_system.py  test_cli_tool.py  test_main.py  test_run_vela_script.py  test_utils_fs.py  test_utils_helpers.py  test_utils_proc.py
tests/e2e/: test_e2e.py
tests/mlia/: __init__.py  conftest.py  test_api.py  test_backend_application.py  test_backend_common.py  test_backend_controller.py  test_backend_execution.py  test_backend_fs.py  test_backend_manager.py  test_backend_output_parser.py  test_backend_proc.py  test_backend_protocol.py  test_backend_source.py  test_backend_system.py  test_cli_commands.py  test_cli_config.py  test_cli_helpers.py  test_cli_logging.py  test_cli_main.py  test_core_context.py  test_core_data_analysis.py  test_core_helpers.py  test_core_workflow.py  test_devices_ethosu_advice_generation.py  test_devices_ethosu_advisor.py  test_devices_ethosu_config.py  test_devices_ethosu_data_analysis.py  test_devices_ethosu_data_collection.py  test_devices_ethosu_performance.py  test_devices_ethosu_reporters.py  test_nn_tensorflow_config.py  test_nn_tensorflow_optimizations_clustering.py  test_nn_tensorflow_optimizations_pruning.py  test_nn_tensorflow_optimizations_select.py  test_nn_tensorflow_tflite_metrics.py  test_nn_tensorflow_utils.py  test_tools_aiet_wrapper.py  test_tools_metadata_common.py  test_tools_metadata_corstone.py  test_tools_vela_wrapper.py  (+5 more)
tests/test_resources/: application_config.json  hello_world.json
tests/utils/: __init__.py  common.py  generate_keras_model.py  logging.py  rewrite.py  tflite_metrics.py
tests_e2e/: conftest.py  optimization_e2e_test.toml  test_e2e.py
(+276 files in other folders)
